# styx-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: validation-proposal.md
scripts/: clone_repos.py  clone_repos.sh  repos.json  strip_help_version.py  validate_descriptors.py
src/styx_agent/: __init__.py  __main__.py  agent.py  paths.py  telemetry.py  toollist.py
src/styx_agent/author/: __init__.py  boutiques.py  validator.py
src/styx_agent/explorer/: __init__.py  interface.py  outputs.py
src/styx_agent/scanner/: __init__.py  _common.py  enumeration.py  outputs.py  parsing.py
src/styx_agent/tools/: __init__.py  filesystem.py
src/styx_ai/: __init__.py  __main__.py  agent.py  paths.py
src/styx_ai/author/: __init__.py  boutiques.py  validator.py
src/styx_ai/explorer/: __init__.py  __main__.py  agent.py  interface.py  outputs.py
src/styx_ai/scanner/: __init__.py  enumeration.py  outputs.py  parsing.py
src/styx_ai/tools/: filesystem.py
tests/: test_acompletion_retry.py  test_context_compaction.py  test_filesystem_sandbox.py  test_telemetry_and_runs.py  test_toollist.py  test_validator_media_types.py
