[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "styx-ai"
version = "0.1.0"
description = "AI-assisted tooling for the Styx/NiWrap ecosystem"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.60",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
