[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "styx-agent"
version = "0.1.0"
description = "Source-reading agent pipeline that generates Styx descriptors for the NiWrap ecosystem"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.60",
]

[project.scripts]
styx-agent = "styx_agent.__main__:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pytest",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# Most long lines are unavoidable LLM prompt/descriptor string literals; let the
# formatter own code width instead of hard-wrapping prose.
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
